# medchem-mcp-server

./: .cursorrules  README.md  SETUP.md  claude_desktop_config.json  pyproject.toml  test_server.py  test_session.py
.claude/: settings.local.json
examples/: 1lep_docking_example.py  zinc_editing_example.py
medchem_mcp_server/: __init__.py  molecule_editing.py  molecule_tools.py  molecule_utilities.py  protein_tools.py  server.py  session_state.py  session_tools.py  utilities.py  zinc_editing_tools.py  zinc_tooling.py
