[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medchem-mcp-server"
version = "0.1.0"
description = "A simple MCP server template for medicinal chemistry applications"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
medchem-mcp-server = "medchem_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medchem_mcp_server*"]
