[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medchem-mcp-server"
version = "0.1.0"
description = "A simple MCP server template for medicinal chemistry applications"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "meeko>=0.6.1",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pypdb>=2.4",
    "rdkit>=2025.3.5",
    "requests>=2.32.4",
    "scipy>=1.15.3",
]

[project.scripts]
medchem-mcp-server = "medchem_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medchem_mcp_server*"]
